--- a/about.html
+++ b/about.html
@@ -26,10 +26,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/about.html">About</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -43,11 +43,11 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="iTutorials/fee.html">Fee Structure</a></li>
+              <li><a class="dropdown-item" href="/iTutorials/fee.html">Fee Structure</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/contact.html">Contact Us</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex">
