--- a/contact.html
+++ b/contact.html
@@ -24,10 +24,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/index.html">Home</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/about.html">About</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/about.html">About</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
@@ -41,11 +41,11 @@
               <li>
                 <hr class="dropdown-divider">
               </li>
-              <li><a class="dropdown-item" href="iTutorials/fee.html">Fee Structure</a></li>
+              <li><a class="dropdown-item" href="/iTutorials/fee.html">Fee Structure</a></li>
             </ul>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="iTutorials/contact.html">Contact Us</a>
+            <a class="nav-link active" aria-current="page" href="/iTutorials/contact.html">Contact Us</a>
           </li>
         </ul>
         <form class="d-flex">
@@ -199,7 +199,7 @@
     <ul class="nav justify-content-center border-bottom pb-3 mb-3">
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-      <li class="nav-item"><a href="iTutorials/fee.html" class="nav-link px-2 text-muted">Fees</a></li>
+      <li class="nav-item"><a href="/iTutorials/fee.html" class="nav-link px-2 text-muted">Fees</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
       <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
     </ul>
