--- a/about.html
+++ b/about.html
@@ -11,6 +11,45 @@
     integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
   <link rel="stylesheet" href="./iTutorials/about.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    *{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+
+.section{
+  width: 100%;
+  height: 100%;
+}
+
+.container{
+  width: 100%;
+  display: block;
+  margin: auto;
+  padding-top: 100px;
+}
+
+.content-section{
+  float: left;
+  width: 50%;
+}
+
+.image-section{
+  float: right;
+  width: 50%;
+}
+
+.image-section img{
+  width: 100%;
+  height: auto;
+}
+
+.social{
+  margin-top: 10px;
+  margin-left: 0px;
+}
+  </style>
 
   <title>About Us</title>
 </head>
