--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="image-section">
-          <img src="/5.jfif" alt="">
+          <img src="iTutorials/5.jfif" alt="">
         </div>
       </div>
     </section>
