--- a/about.html
+++ b/about.html
@@ -188,7 +188,7 @@
           </div>
         </div>
         <div class="image-section">
-          <img src="./iTutorials/5.jfif" alt="">
+          <img src="https://source.unsplash.com/random/800x600" alt="">
         </div>
       </div>
     </section>
